# chat-rs

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
migrations/: 20230711164451_create_user_table.down.sql  20230711164451_create_user_table.sql  20230711164451_create_user_table.up.sql  20230718142837_create_user_verification.up.sql
src/: config.rs  logger.rs  main.rs
src/server/: mod.rs
src/server/handlers/: mod.rs  user.rs
