[package]
name = "chat-rs"
version = "0.1.0"
authors = ["Chris Liu <chrisliupascal@gmail.com>"]
edition = "2021"
description = "Experimental project to build a chat application server in Rust"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["tracing"] }
axum-extra = { version = "0.7.5", features = ["cookie"] }
axum-macros = "0.3.7"
bcrypt = "0.15.0"
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
serde = "1.0.171"
serde_json = "1.0.100"
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time", "migrate", "json"] }
time = { version = "0.3.23", features = ["formatting", "serde"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
uuid = { version = "1.4.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
